Fixed spacing issue

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -11,7 +11,7 @@
 }
 
 .middle {
-    height: 350px;
+    height: 250px;
 }
 
 .gray {
@@ -26,7 +26,7 @@
 
 .image {
     width: 370px;
-    height: 250px;
+    /height: 250px;
 }
 
 .yellowBar {
